@@ -1,3 +1,9 @@
+2009-01-22  Dan Williams  <dcbw@redhat.com>
+
+	* src/connection-editor/ip4-routes-dialog.c
+		- Validate options in the IP4 routes dialog and disable the OK
+			button when entered values are invalid
+
 2009-01-19  Dan Williams  <dcbw@redhat.com>
 
 	* src/applet.c
